--- a/rethinking statistics-Copy1.ipynb
+++ b/rethinking statistics-Copy1.ipynb
@@ -57,7 +57,7 @@
     }
    ],
    "source": [
-    "## R code 0.1 CHANGING AS AN EXPERIMENT\n",
+    "## R code 0.1 \n",
     "print( \"All models are wrong, but some are useful.\" )"
    ]
   },
